components/Nav/Nav.module.scss
@import "../styles/mixins";
@import "../styles/variables";

$navItems: 6;
.nav {
  @include bp(medium) {
    margin-left: spacing(22);
  }
}
.navWrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  visibility: hidden;
  transition: visibility 1s, opacity 20s;

  @include bp(medium) {
    position: static;
    opacity: 1;
    visibility: visible;
  }
}
.navList {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  visibility: hidden;
  z-index: 99999;

  @include bp(medium) {
    flex-direction: row;
    visibility: visible;
    position: static;
    top: 0;
    transform: none;
  }
}
.navItem {
  display: flex;
  align-self: flex-start;
  opacity: 0;
  margin-bottom: 5px;
  transform: translateX(20px);
  transition: all 0.3s;

  $time-offset-close: 0;
  @for $i from $navItems through 1 {
    &:nth-child(#{$i}) {
      $time-offset-close: $time-offset-close + 0.1;
      transition-delay: #{$time-offset-close}s;
      span {
        transition-delay: #{$time-offset-close}s;
      }
    }
  }
  @include bp(medium) {
    transform: none;
    transition: none;
    opacity: 1;
    & + & {
      margin-left: spacing(7);
    }
  }
}
.active {
  a:after {
    width: 100%;
    transition: width 0.25s ease-in-out;
  }
}
.navLink {
  position: relative;
  text-decoration: none;
  color: $amber;
  font-family: sans-serif;
  font-size: 30px;
  text-transform: uppercase;

  &:hover {
    &:after {
      width: 100%;
      transition: width 0.25s ease-in-out;
    }
  }
  &:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 0;
    height: 2px;
    transform: translateX(-50%);
    background-color: $white;
    transition: width 0.25s ease-in-out;
  }
  @include bp(medium) {
    color: $white;
  }
}

.themeToggle {
  @include bp(medium){
    align-self:center;
  }
}

// NAV MOBILE
.iconToggle {
  display: block;
  width: 30px;
  height: 30px;
  position: relative;
  top: 2%;
  left: 2%;
  z-index: 9;
  @include bp(medium) {
    display: none;
  }

  .bar {
    display: block;
    width: 100%;
    height: 2px;
    position: absolute;
    top: 50%;
    background-color: $amber;
    transform: translate(0, -50%);
    transition: opacity 0.3s 0.3s;
  }
  &::before,
  &::after {
    content: "";
    display: block;
    width: 100%;
    height: 2px;
    position: absolute;
    background-color: $amber;
    transition: transform 0.3s, top 0.3s 0.3s, bottom 0.3s 0.3s;
  }
  &::before {
    top: 6px;
  }
  &::after {
    bottom: 6px;
  }
}
.menuBkgrnd {
  visibility: hidden;
  width: 300%;
  height: calc((100% / 3) + 15%);
  position: absolute;
  left: -130%;
  background-color: $white;
  transition: background-position 0.5s, transform 0.5s 0.5s, visibility 0.5s 1s;

  @include bp(medium) {
    display: none;
  }
}
.top {
  transform: rotate(-45deg) translateY(-150%);
  background: linear-gradient(to top, $amber 50%, $white 50%);
  background-size: 100% 200%;
  background-position: -100% 100%;
}
.middle {
  transform: rotate(-45deg) translateY(50%) scaleY(0);
  background: $white;
}
.bottom {
  transform: rotate(-45deg) translateY(250%);
  background: linear-gradient(to bottom, $white 50%, $amber 50%);
  background-size: 100% 200%;
  background-position: 0 -100%;
}
.open {
  .navWrapper {
    opacity: 1;
    visibility: visible;
    transition: visibility 3s;
  }
  .iconToggle {
    .bar {
      opacity: 0;
      transition: opacity 0.3s;
    }
    &::before,
    &::after {
      background-color: $amber;
    }
    &::before {
      top: calc(50% - 1px);
      transform: rotate(45deg);
    }
    &::after {
      bottom: calc(50% - 1px);
      transform: rotate(-45deg);
    }
    &::before,
    &::after {
      transition: top 0.3s, bottom 0.3s, transform 0.3s 0.3s;
    }
  }
  .menuBkgrnd {
    visibility: visible;
    transition: background-position 0.5s, transform 0.5s 0.5s;
  }
  .top {
    transform: rotate(-45deg) translateY(-49%);
    background-position: 0 0;
  }
  .middle {
    transform: rotate(-45deg) translateY(50%) scaleY(1);
  }
  .bottom {
    transform: rotate(-45deg) translateY(149%);
    background-position: 0 0;
  }
  .navList {
    visibility: visible;
  }
  .navItem {
    opacity: 1;
    transform: translateX(0);
    backface-visibility: hidden;
    $time-offset-open: 1;
    @for $i from 1 through $navItems {
      &:nth-child(#{$i}) {
        $time-offset-open: $time-offset-open + 0.1;
        transition-delay: #{$time-offset-open}s;
        span {
          transition-delay: #{$time-offset-open}s;
        }
      }
    }
  }
}

